Add Metrics Integration

--- a/Site/index.html
+++ b/Site/index.html
@@ -233,6 +233,7 @@ Graduate from the University of Technology, Sydney. BSc. in Games Development.
 			<script src="js/breakpoints.min.js"></script>
 			<script src="js/util.js"></script>
 			<script src="js/main.js"></script>
+			<script src="Metrics.js"></script>
 			<script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 	</body>
 </html>
